# PSO_GA_optimization

./: README.md  pyproject.toml  script.py
algorithms/: GA.py  PSO.py
configs/: config.yaml
interface/: UI_1.py  UI_2.py  window_face.py
tests/: test_PSO_with_interface.py  test_func_1.py  test_simple_ga.py  test_visualization.py
